# facai

./: .gitignore  README.md  pyproject.toml
.cache/akshare/bars/: 000001.csv  000002.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000014.csv  000016.csv  000017.csv  000019.csv  000020.csv  000021.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000034.csv  000035.csv  000036.csv  000037.csv  000039.csv  000042.csv  000045.csv  000048.csv  000049.csv  000050.csv  000055.csv  000056.csv  000058.csv  000059.csv  000060.csv  000061.csv  000062.csv  (+3493 more)
.cache/akshare/index/: 000300.csv
.cache/akshare/meta/: stock_list.csv
app/: __init__.py  config.py  doctor.py  error_messages.py  main.py  models.py  network.py  reporting.py
app/backtest/: __init__.py  runner.py
app/data_source/: __init__.py  akshare_client.py  base.py
app/engine/: __init__.py  recommender.py
app/features/: __init__.py  indicators.py
app/strategy/: __init__.py  holding_period.py  regime_risk.py  risk_targets.py  scoring.py
app/universe/: __init__.py  filtering.py
config/: default.yaml
reports/: recommendations.csv  recommendations.md  recommendations.txt
scripts/: check_data_freshness.py  check_today_update.sh  check_today_update_json.sh  check_today_update_multi.sh
tests/: test_backtest.py  test_cache_determinism.py  test_error_messages.py  test_indicators.py  test_recommender.py  test_reporting.py  test_scoring.py  test_universe_filtering.py
