[project]
name = "a-share-picker"
version = "0.1.0"
description = "Recommend one A-share stock before market open."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.14.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

